# deepbot

./: .dockerignore  .env.claude.example  .env.deepbot.example  .env.example  .env.litellm.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.claude-runner  README.md  README_JP.md  compose.yaml  openclaw.md  pyproject.toml
config/: AGENT.md  litellm.yaml
config/security/: detection-rules.yaml
docs/: a2ui.md  claude-subagent-design.md  deepbot-job-md-cron-design.md  host-resource-monitor.md  security-alerting.md
host-resource-monitor/: README.md  host-resource-monitor.service  host-resource-monitor.timer  host_resource_monitor.py
infra/fluent-bit/: fluent-bit.conf  parsers.conf
infra/systemd/: deepbot-security-alert.env.sample  deepbot-security-alert.service  fluent-bit.service
scripts/: claude_runner_server.mjs  docker-entrypoint.sh  test.py  test_zai_chat_completion.py
src/deepbot/: audit_log.py  config.py  main.py  mcp_tools.py  skills.py
src/deepbot/agent/: claude_hooks.py  claude_subagent_tool.py  runtime.py
src/deepbot/gateway/: discord_bot.py
src/deepbot/memory/: session_store.py
src/deepbot/scheduler/: __init__.py  engine.py  loader.py  models.py
tests/: test_agent_runtime.py  test_audit_log.py  test_claude_hooks.py  test_claude_subagent_tool.py  test_config_security.py  test_discord_gateway.py  test_runtime_guardrails.py  test_scheduler_gateway.py  test_scheduler_loader.py  test_security_detector.py  test_security_monitors.py  test_security_normalizer.py  test_security_summarizer.py  test_session_store.py  test_skills.py
(+10 files in other folders)
